frontweb/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontweb-v10
  labels:
    app: frontweb
    version: v10
spec:
  replicas: 1
  selector:
    matchLabels:    
      app: frontweb
      version: v10
  template:
    metadata:
      labels:
        app: frontweb
        version: v10
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: frontweb-v10
          image: image-registry.openshift-image-registry.svc:5000/demo/frontweb:v10
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
