frontweb/DeploymentConfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: frontweb-v10
  labels:
    app: frontweb
    version: v10
spec:
  replicas: 1
  selector:
    app: frontweb
    version: v10
  template:
    metadata:
      labels:
        app: frontweb
        version: v10
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: frontweb-v10
          image: image-registry.openshift-image-registry.svc:5000/demo/frontweb:1.0
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
  triggers:
    - type: "ImageChange"
      imageChangeParams:
        automatic: true
        from:
          kind: "ImageStreamTag"
          name: "frontweb:1.0"
        containerNames:
          - "frontweb-v10"
