frontweb/Deployment_v12.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontweb-v12
  labels:
    app: frontweb
    version: v12
spec:
  replicas: 1
  selector:
    matchLabels:    
      app: frontweb
      version: v12
  template:
    metadata:
      labels:
        app: frontweb
        version: v12
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: frontweb-v12
          image: image-registry.openshift-image-registry.svc:5000/demo/frontweb:1.2
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
