frontweb/Service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontweb
  labels:
    app: frontweb
    service: frontweb
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: frontweb
  type: ClusterIP
  sessionAffinity: None
