frontweb/DestinationRule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontweb
spec:
  host: frontweb
  subsets:
  - name: v1
    labels:
      version: v10
