frontweb/VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo
spec:
  hosts:
  - "*"
  gateways:
  - demo-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: frontweb
            port:
              number: 8080
